# aoc

./: .gitignore  README.md  pyproject.toml
aoc/: __main__.py
aoc/cli/: __init__.py
aoc/utils/: __init__.py
aoc/year2015/day1/: __init__.py
aoc/year2015/day2/: __init__.py
aoc/year2015/day3/: __init__.py
aoc/year2015/day4/: __init__.py
aoc/year2015/day5/: __init__.py
aoc/year2015/day7/: __init__.py
aoc/year2023/day1/: __init__.py
aoc/year2023/day2/: __init__.py
aoc/year2023/day3/: __init__.py
aoc/year2023/day4/: __init__.py
aoc/year2023/day6/: __init__.py
aoc/year2023/day7/: __init__.py
aoc/year2024/day1/: __init__.py
aoc/year2024/day2/: __init__.py
aoc/year2024/day3/: __init__.py
tests/: test_2015_day3.py  test_2015_day5.py  test_2015_day7.py  test_2023_day1.py  test_2023_day2.py  test_2023_day3.py  test_2023_day4.py  test_2023_day6.py  test_2023_day7.py
