[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aoc"
description = 'AdventofCode cli helper'
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Heath Brown", email = "heathd.brown@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "click",
  "python-dotenv",
  "requests",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/heathdbrown/aoc#readme"
Issues = "https://github.com/heathdbrown/aoc/issues"
Source = "https://github.com/heathdbrown/aoc"

[project.scripts]
aoc = "aoc.cli:aoc"

[tool.hatch.version]
path = "aoc/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
  "pylint",
  "black",
  "mypy",
  "more-itertools"
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=aoc --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "aoc/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
